--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_database: ^9.0.5
   json_annotation: ^4.4.0
   flutter_switch: ^0.3.2
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
