--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   json_annotation: ^4.4.0
   flutter_switch: ^0.3.2
   charts_flutter: ^0.12.0
+  sign_in_with_apple: ^3.3.0
 
 dev_dependencies:
   flutter_test:
