--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_switch: ^0.3.2
   charts_flutter: ^0.12.0
   sign_in_with_apple: ^3.3.0
+  firebase_storage: ^10.2.8
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
