--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   sign_in_with_apple: ^3.3.0
   youtube_player_flutter: ^8.0.0
   image_picker: ^0.8.4+10
+  firebase_storage: ^10.2.9
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
