--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   image_picker: ^0.8.4+10
   firebase_storage: ^10.2.9
   path_provider: ^2.0.9
+  firebase_analytics: ^9.1.2
+  firebase_in_app_messaging: ^0.6.0+9
 
 dev_dependencies:
   flutter_test:
