--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   firebase_analytics: ^9.1.2
   firebase_in_app_messaging: ^0.6.0+9
   fl_chart: ^0.46.0
-
+  in_app_purchase: ^3.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
